--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start" : "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=NODE_JS_VERSION"
+  },
   "author": "kulungRAI",
   "license": "ISC",
   "dependencies": {
