--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": ">=NODE_JS_VERSION"
+    "node": ">=14.20.1"
   },
   "author": "kulungRAI",
   "license": "ISC",
